# coverage-sh

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: lint_test.yml  release.yml
coverage_sh/: plugin.py
example/: README.md  main.py  pyproject.toml  syntax_example.sh
tests/: conftest.py  test_collect.py  test_plugin.py
tests/resources/: test_multi_line.out  test_multi_line.sh
tests/resources/examples/: python_file.py
tests/resources/testproject/: inner.py  main_async.py  test.sh
tests/resources/testproject_async/: pyproject.toml  test_main.py
